Fixed layout bug in portrait tablet mode

--- a/public/css/aaa.css
+++ b/public/css/aaa.css
@@ -254,6 +254,8 @@ a.about {
   }
   .content {
     padding-top:1rem;
+    margin-left:auto;
+    margin-right:auto;
   }
 
   .topics-list {
@@ -265,6 +267,10 @@ a.about {
     width:100%;
     font-size:1rem;
     text-align:center;
+  }
+
+  .sidebar {
+    display:none;
   }
   
   #search {
